# jiminy

./: .buildinfo  .clang-format  .clang-tidy  .gitignore  .mypy.ini  .pylintrc  .style.yapf  CMakeLists.txt  COPYING.BSD  INSTALL.html  INSTALL.md  Installation.md  LICENSE  README.html  README.md  environment.yml  flexible_arm.urdf  genindex.html  index.html  integrate_zoh.py  objects.inv  postBuild  py-modindex.html  requirements.txt  search.html  searchindex.js  tutorial.html  tutorial.ipynb
core/: CMakeLists.txt
core/examples/: CMakeLists.txt
core/examples/double_pendulum/: CMakeLists.txt  double_pendulum.cc
core/examples/external_project/: CMakeLists.txt  double_pendulum.cc
core/include/jiminy/core/: AbstractController.h  AbstractController.tpp  AbstractIODevice.h  AbstractIODevice.tpp  AbstractMotor.h  AbstractSensor.h  AbstractSensor.tcc  AbstractSensor.tpp  BasicMotors.h  BasicSensors.h  Constants.h  ControllerFunctor.h  ControllerFunctor.tcc  ControllerFunctor.tpp  Engine.h  FileDevice.h  Macro.h  Macros.h  MemoryDevice.h  Model.h  Model.tcc  Model.tpp  Sensor.h  TelemetryData.h  TelemetryData.tpp  TelemetryRecorder.h  TelemetrySender.h  Types.h  Utilities.h  Utilities.tcc  Utilities.tpp  constants.h  exceptions.h  fwd.h  macros.h  traits.h  types.h
core/src/: AbstractController.cc  AbstractIODevice.cc  AbstractMotor.cc  AbstractSensor.cc  BasicMotors.cc  BasicSensors.cc  Constants.cc  ControllerFunctor.cc  Engine.cc  FileDevice.cc  MemoryDevice.cc  Model.cc  Sensor.cc  TelemetryData.cc  TelemetryRecorder.cc  TelemetrySender.cc  Utilities.cc  constants.cc
core/src/constraints/: AbstractConstraint.cc  DistanceConstraint.cc  FixedFrameConstraint.cc  JointConstraint.cc  SphereConstraint.cc  WheelConstraint.cc  abstract_constraint.cc  distance_constraint.cc  fixed_frame_constraint.cc  frame_constraint.cc  joint_constraint.cc  sphere_constraint.cc  wheel_constraint.cc
core/src/control/: AbstractController.cc  abstract_controller.cc
core/src/engine/: Engine.cc  EngineMultiRobot.cc  System.cc  engine.cc  engine_multi_robot.cc  system.cc
core/src/hardware/: abstract_motor.cc  abstract_sensor.cc  basic_motors.cc  basic_sensors.cc
core/src/io/: AbstractIODevice.cc  FileDevice.cc  JsonLoader.cc  JsonWriter.cc  MemoryDevice.cc  Serialization.cc  abstract_io_device.cc  file_device.cc  json_loader.cc  json_writer.cc  memory_device.cc  serialization.cc
core/src/model/: AbstractMotor.cc  AbstractSensor.cc  BasicMotors.cc  BasicSensors.cc  Model.cc
core/src/robot/: AbstractConstraint.cc  AbstractMotor.cc  AbstractSensor.cc  AbstractTransmission.cc  BasicMotors.cc  BasicSensors.cc  BasicTransmissions.cc  DistanceConstraint.cc  FixedFrameConstraint.cc  JointConstraint.cc  LCPSolvers.cc  Model.cc  Robot.cc  SphereConstraint.cc  WheelConstraint.cc  abstract_motor.cc  abstract_sensor.cc  basic_motors.cc  basic_sensors.cc  model.cc  robot.cc
core/src/solver/: ConstraintSolvers.cc  ContactSolvers.cc  LCPSolvers.cc  constraint_solvers.cc
core/src/stepper/: AbstractRungeKuttaStepper.cc  AbstractStepper.cc  EulerExplicitStepper.cc  ExplicitEulerStepper.cc  LieGroup.cc  RungeKutta4Stepper.cc  RungeKuttaDOPRIStepper.cc  RungeKuttaStepper.cc  abstract_runge_kutta_stepper.cc  abstract_stepper.cc  euler_explicit_stepper.cc  runge_kutta4_stepper.cc  runge_kutta_dopri_stepper.cc
core/src/telemetry/: TelemetryData.cc  TelemetryRecorder.cc  TelemetrySender.cc  telemetry_data.cc  telemetry_recorder.cc  telemetry_sender.cc
core/src/utilities/: Helpers.cc  Json.cc  Pinocchio.cc  Random.cc  geometry.cc  helpers.cc  json.cc  pinocchio.cc  random.cc
core/unit/: CMakeLists.txt  EngineSanityCheck.cc  ModelTest.cc  engine_sanity_check.cc  miscellaneous.cc  model_test.cc  random_test.cc
core/unit/data/: branching_pendulum.urdf  double_pendulum_rigid.urdf
examples/cpp/pip_extension/: CMakeLists.txt  double_pendulum.cc  double_pendulum.urdf
examples/double_pendulum/: CMakeLists.txt  double_pendulum.cc
examples/double_pendulum/src/: double_pendulum.cc
python/: CMakeLists.txt
python/gym_jiminy/common/: setup.py
python/gym_jiminy/envs/: MANIFEST.in  setup.py
python/gym_jiminy/examples/: box_uneven_ground_impulse_contact.py  pipeline_benchmark.py  quantity_benchmark.py  tutorial_rl.ipynb
python/gym_jiminy/examples/rllib/: acrobot_ppo.py  ant_td3.py  cartpole_ppo.py  fcnet.py  utilities.py
python/gym_jiminy/examples/stable_baselines3/: acrobot_ppo.py  cartpole_ppo.py  utilities.py
python/gym_jiminy/rllib/: setup.py
python/gym_jiminy/toolbox/: setup.py
python/gym_jiminy/unit_py/: test_deformation_estimator.py  test_misc.py  test_pipeline_control.py  test_pipeline_design.py  test_quantities.py  test_reward.py  test_rewards.py  test_task_curriculum.py  test_terminations.py  test_training_toys_models.py  test_wrappers.py  utilities.py
python/jiminy_py/: MANIFEST.in  setup.py
python/jiminy_py/examples/: box_uneven_ground_impulse_contact.py  collision_detection.py  constraint_fixed_frame.py  constraint_wheel.py  double_pendulum.py  extra_cameras.py  force_coupling.py  inverse_kinematics.py  keynote.py  sphere_rolling.py  tutorial.ipynb
python/jiminy_py/src/jiminy_py/: log.py  (+19 more)
python/jiminy_py/unit_py/: test_dense_pole.py  test_double_spring_mass.py  test_flexible_arm.py  test_foot_pendulum.py  test_multi_robot.py  test_simple_mass.py  test_simple_pendulum.py  test_simulator.py  test_utils.py  utilities.py
python/jiminy_pywrap/: CMakeLists.txt  setup.py
python/jiminy_pywrap/src/: Compatibility.cc  Constraints.cc  Controllers.cc  Engine.cc  Functors.cc  Generators.cc  Helpers.cc  Module.cc  Motors.cc  Robot.cc  Sensors.cc  Transmissions.cc  compatibility.cc  constraints.cc  controllers.cc  engine.cc  functors.cc  generators.cc  helpers.cc  module.cc  motors.cc  robot.cc  sensors.cc
scenarios/double_pendulum/: CMakeLists.txt
scenarios/double_pendulum/src/: double_pendulum.cc
soup/: CMakeLists.txt
soup/gtest/: CMakeLists.txt
soup/hdf5/: CMakeLists.txt
soup/jsoncpp/: CMakeLists.txt
soup/jsoncpp/patch/: patch-aa
unit/: CMakeLists.txt  EngineSanityCheck.cc
(+1939 files in other folders)
